@@ -3,6 +3,8 @@ Comprehensive changes can be found in Git change history:
 	https://github.com/mkahvi/taskmaster/commits/master
 
 ## [0.14...]
+### 2020-04-29
+	Fixed: Audio manager under some conditions fails to hook to default devices.
 ### 2020-04-28
 	Fixed: Path visibility option was ignored. It should now properly be generated, cached, and displayed.
 	Changed: Various small improvements to log output.
